# CHO_SDL_Platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/sql/: README.md
data/synthetic/: README.md
data/synthetic/raw/: clone_latent_truths_5000_legacy.csv
docs/: ARCHITECTURE.md  FUTURE_WORK.md  Notebook_Summary.md  Project_Overview.md  RESULTS.md  ROADMAP.md
examples/: run_v1_pipeline.py
scripts/: generate_synthetic_cld.py
src/cho_sdl/: __init__.py
